analysis/symbol-light-classes/testData/lightClassByFqName/compilationErrors/typeAliasActualization2.java
@common.pack.RegularAnnotation()
@jvm.pack.ActualAnnotation()
public final class ClassToCheck /* common.pack.ClassToCheck*/ {
  public  ClassToCheck();//  .ctor()

  public final void t(@org.jetbrains.annotations.NotNull() @org.jetbrains.annotations.NotNull() jvm.pack.ActualClass);//  t(@org.jetbrains.annotations.NotNull() jvm.pack.ActualClass)
}
